Final submission at each page

--- a/pirate.html
+++ b/pirate.html
@@ -88,6 +88,11 @@
             <div class="col-md-2"><img src="image/place.jpg" id="image 24" alt="HiddenSite" style="width:100px;height:100px;" onclick="check(24)"></div>
         </div>
     </div>
+    <p> Press the button to create an new element of type div and then add it to the container.
+    </p>
+    <button onclick="makeNewDiv()">Add one</button>
+<div id="button" type="button" class="btn btn-success" onclick="reset()">New Game</div>
+</body>
 <script>
     let ids = []
   for(let i=0;i<25;i++)
@@ -174,7 +179,4 @@
 
         }
 </script>
-
-
-</body>
 </html>
