--- a/react.html
+++ b/react.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Webapps Srinath react</title>
+  <title>Webapps Srinadh react</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -12,13 +12,13 @@
 </head>
 <body>
 
-    <h1>Srinath speed check</h1>
+    <h1>Srinadh speed check</h1>
     <div id="target">Your Time:</div>
     <div id="counter">Count:</div>
 
     <div class="container text-center">
-        <button type="button" class="btn btn-success" onclick="startTime()">Start Timer</button>
-        <button type="button" class="btn btn-success" onclick="recordTime()">React</button>
+        <button type="button" class="btn btn-primary" onclick="startTime()">Start Timer</button>
+        <button type="button" class="btn btn-primary" onclick="recordTime()">React</button>
     </div>
   
  
