--- a/merger.html
+++ b/merger.html
@@ -2,7 +2,7 @@
 <html> <head> <style>
     .flex-container {
       display: flex;  flex-direction:row;
-      background-color: red;
+      background-color: rgb(0, 255, 119);
   }
 
 .flex-container > div {  /*div children of the flex container*/
@@ -14,7 +14,7 @@
 @media (max-width: 600px) { 
 	 .flex-container{
 		 flex-direction:column;
-		 background-color: green;
+		 background-color: rgb(66, 0, 128);
 	  }
 	}
 </style>
@@ -34,7 +34,7 @@
 
 
 <body>
-    <h1>Srinath builds a merger</h1>
+    <h1>Srinadh builds a merger</h1>
     <br>
     <hr>
     <div class="mb-3">
@@ -62,13 +62,13 @@
 </body>
 <script>
 	function makeNewDiv(){
-		/* make the div and its text */
+		/* make the container of div and its text */
 		let element = document.createElement("div")
 		element.innerHTML = document.getElementById("text").value;
         element.className = "merger"
 		element.style.color = "orange"
 
-		/* add it to the container */
+		/* add it to the div container */
 		let container = document.getElementById('target')
 		container.appendChild(element)
 		
@@ -92,7 +92,7 @@
         let childElement = document.getElementsByClassName("merger")[0]
         parent.insertBefore(element,childElement)
     }
-    function swap()
+   function swap()
   {
     let mergerItemss = document.getElementsByClassName("merger")
     let mergerItemssLength = mergerItemss.length
@@ -105,7 +105,6 @@
     secondElement.parentNode.insertBefore(firstElement, secondElement);
     parentElement.insertBefore(secondElement, siblingA);
   }
-
 
 </script>
 </html>	
